Bug 55674 - Pop-down menus not moved/transformed along parent window
Summary: Pop-down menus not moved/transformed along parent window
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-05 17:33 UTC by Thiago Macieira
Modified: 2012-10-30 18:08 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Thiago Macieira 2012-10-05 17:33:22 UTC
When you move or transform a window, the menus should be moved/transformed at the same time. That is not happening -- the menu stays where it is.

Steps to reproduce:
1. Launch an application with menus
2. Click the menu
3. Move the window with Super+LMB or rotate

Note how the menu stays where it is.

Also note that if you close and reopen the menu, it appears where it was before, not where the window currently is.

Related bug: https://bugreports.qt-project.org/browse/QTBUG-27467
Comment 1 Kristian Høgsberg 2012-10-30 18:08:49 UTC
                 struct shell_surface *shsurf,
commit 57e090746e45b941cc313d464f99b7826fdf7ba5
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Tue Oct 30 14:07:27 2012 -0400

    shell: End popups if we trigger a shell grab
    
    Clicking outside popups closes them except in case of a shell grab
    (move, resize or rotate), in which case we move the parent window away
    from under the popup.  Instead, just end the popup in those cases.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=55674


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.